# osm-admin

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  export-test.dockerfile  import-test.dockerfile
.cargo/: config.toml
.github/workflows/: ci.yml  docker-hub-ci-amd64.yml  main.yml  osm-admin-linux-ci.yml  osm-admin-macos-ci.yml
db/: Dockerfile  init.sh  pgpass
src/: lib.rs
src/db/: pg.rs
src/dump/: changeset_record.rs  mod.rs  node_record.rs  node_relation.rs  node_relations_reader.rs  node_tag_record.rs  sql.rs  table_def.rs  table_fields.rs  table_reader.rs  table_record.rs  user_record.rs
src/error/: mod.rs  osm_error.rs
src/export/: mod.rs  pbf.rs
src/import/: db.rs  dump.rs  dump_generator.rs  mod.rs  table_data_writer.rs  table_data_writers.rs
src/reporting/: stopwatch.rs
tests/fixtures/: niue-230612.osm.pbf
