[package]
name = "osm-admin"
version = "0.0.11-alpha"
edition = "2021"


[dependencies]
osmpbf = "0.3.0"
clap = "4.0.29"
rpassword = "7.2.0"
json = "0.12.4"
anyhow = "1.0.66"
chrono = "0.4.23"
transient-btree-index = "0.5.0"
log = "0.4"
simple_logger = "4.0.0"
escape_string = "0.1.2"
num-format = "0.4.4"
postgres = "0.19.4"
num_cpus = "1.15.0"
regex = "1.7.0"
thiserror= "1.0.40"
benchmark-rs = "0.1.0"
osm-io = "0.0.13-alpha"
tikv-jemallocator = "0.5.0"
