[package]
name = "osm-admin"
version = "0.0.13-beta"
edition = "2021"


[dependencies]
osmpbf = "0.3.3"
clap = "4.5.4"
rpassword = "7.3.1"
json = "0.12.4"
anyhow = "1.0.82"
chrono = "0.4.37"
transient-btree-index = "0.5.1"
log = "0.4.21"
simple_logger = "4.3.3"
escape_string = "0.1.2"
num-format = "0.4.4"
postgres = "0.19.7"
num_cpus = "1.16.0"
regex = "1.10.4"
thiserror= "1.0.58"
benchmark-rs = "0.1.1"
osm-io = "0.1.4"
#osm-io = { git = "https://github.com/navigatorsguild/osm-io.git", branch = "giora/upgrade-dependencies" }
tikv-jemallocator = "0.5.4"
filemagic = "0.12.3"
